--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,42 +1,101 @@
+// group 'com.amolg.flutterbarcodescanner'
+// version '1.0-SNAPSHOT'
+
+// buildscript {
+//     repositories {
+//         google()
+//         jcenter()
+//     }
+
+//     dependencies {
+//         classpath 'com.android.tools.build:gradle:4.1.3'
+//     }
+// }
+
+// rootProject.allprojects {
+//     repositories {
+//         google()
+//         jcenter()
+//     }
+// }
+
+// apply plugin: 'com.android.library'
+
+// android {
+//     compileSdkVersion 30
+
+//     defaultConfig {
+//         minSdkVersion 16
+//         targetSdkVersion 30
+//         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//     }
+//     lintOptions {
+//         disable 'InvalidPackage'
+//     }
+// }
+
+// dependencies {
+//     implementation 'androidx.appcompat:appcompat:1.2.0'
+//     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+//     implementation 'com.google.android.material:material:1.3.0'
+//     implementation 'com.google.android.gms:play-services-vision:20.1.3'
+// }
+
 group 'com.amolg.flutterbarcodescanner'
 version '1.0-SNAPSHOT'
 
 buildscript {
+    ext.kotlin_version = '1.8.0' // updated Kotlin
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:8.1.1' // AGP 8+
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
-rootProject.allprojects {
+allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 30
+    compileSdk = 35 // latest stable
+
+    namespace "dev.flutter.plugins.flutterbarcodescanner" // required namespace
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 30
+        minSdk = 16
+        targetSdk = 35
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    lintOptions {
-        disable 'InvalidPackage'
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
+    lint {
+        disable 'InvalidPackage' // optional
     }
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
 }
